package ca.mcmaster.cas.se2aa4.a2.island.Features.Biomes;

import ca.mcmaster.cas.se2aa4.a2.island.Island.Island;

public interface DiagramProfile {

    void process(Island container);

}
