package ca.mcmaster.cas.se2aa4.a2.island.Features.Elevation;

import ca.mcmaster.cas.se2aa4.a2.island.Island.Island;

public interface ElevationProfile {
    void process(Island container);
}
