package ca.mcmaster.cas.se2aa4.a2.island.UI;

import ca.mcmaster.cas.se2aa4.a2.island.Containers.Island;

public interface FeatureRunner {

    void process(Island island, Configuration config);

}
