package ca.mcmaster.cas.se2aa4.a2.island.UI;

public class SpecificationFactory {

}
